[gd_scene load_steps=2 format=3 uid="uid://buj2jbky0c8eq"]

[ext_resource type="Script" path="res://Banner/banner.gd" id="1_5dkes"]

[node name="Banner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5dkes")

[node name="Timer" type="Timer" parent="."]

[node name="HBoxContainer" type="HSplitContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 40.0
split_offset = 150

[node name="Mine_Counter" type="Label" parent="HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer_Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
